// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoverBox renders 1`] = `
<div
  className="m-layover-box m-layover-box--top"
>
  <div
    className="m-layover-box__vehicle"
    onClick={[Function]}
  >
    <svg
      style={
        Object {
          "height": 27.72,
          "width": 26,
        }
      }
      viewBox="-13 -8.36 26 27.72"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--small on-time"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={11}
          rx={5.5}
          ry={5.5}
          width={26}
          x={-13}
          y={7.359999999999999}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={12.86}
        >
          sooner
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(0.38) rotate(270) translate(-24,-22)"
        />
      </g>
    </svg>
  </div>
  <div
    className="m-layover-box__vehicle"
    onClick={[Function]}
  >
    <svg
      style={
        Object {
          "height": 27.72,
          "width": 26,
        }
      }
      viewBox="-13 -8.36 26 27.72"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--small on-time"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={11}
          rx={5.5}
          ry={5.5}
          width={26}
          x={-13}
          y={7.359999999999999}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={12.86}
        >
          later
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(0.38) rotate(270) translate(-24,-22)"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`LayoverBox renders ghost 1`] = `
<div
  className="m-layover-box m-layover-box--top"
>
  <div
    className="m-layover-box__vehicle"
    onClick={[Function]}
  >
    <svg
      style={
        Object {
          "height": 26.200000000000003,
          "width": 26,
        }
      }
      viewBox="-13 -7.6 26 26.200000000000003"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--small ghost"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={11}
          rx={5.5}
          ry={5.5}
          width={26}
          x={-13}
          y={6.6}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={12.1}
        >
          ghost_soonest
        </text>
        <g
          transform="scale(0.26599999999999996) translate(-24,-23)"
        >
          <path
            className="m-vehicle-icon__ghost-highlight"
            d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
            stroke-join="round"
          />
          <path
            className="m-vehicle-icon__ghost-body"
            d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
            stroke-join="round"
          />
          <ellipse
            className="m-vehicle-icon__ghost-eye"
            cx="19.73"
            cy="22.8"
            rx="3.11"
            ry="3.03"
          />
          <ellipse
            className="m-vehicle-icon__ghost-eye"
            cx="35.29"
            cy="22.8"
            rx="3.11"
            ry="3.03"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;
